--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <div class="row">
       <div class="titulo">
         <h3><em>Noticias</em></h3>
-        <h1>Interesados en extraerse terceros molares(muelas del juicio)</h1>
+        <h1>Interesados en extraerse terceros molares</h1>
         <h2>¡24 de octubre unico dia!</h2>
       </div>
 
